[tool.poetry]
name = "connectly"
version = "0.1.0"
description = "Take Home Assesement for Connectly"
authors = ["Nihar <45964451+nturumel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.25.2"
torch = "^2.0.1"
scikit-learn = "^1.3.0"
sklearn = "^0.0.post7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
